--- a/java-oop-ru/interfaces/build.gradle
+++ b/java-oop-ru/interfaces/build.gradle
@@ -1,7 +1,6 @@
 plugins {
   id 'java'
   id 'com.adarshr.test-logger' version '2.1.1'
-  id 'checkstyle'
 }
 
 repositories {
@@ -9,9 +8,9 @@ repositories {
 }
 
 dependencies {
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
-  testImplementation 'org.assertj:assertj-core:3.23.1'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0-M1'
+  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0-M1'
+  testImplementation 'org.assertj:assertj-core:3.19.0'
 }
 
 test {
@@ -24,8 +23,4 @@ testlogger {
 
 tasks.withType(JavaCompile) {
   options.encoding = "UTF-8"
-}
-
-checkstyle {
-  toolVersion '9.2.1'
 }
